# PyCBR

./: PyCBR-Samples.ipynb  README.md  cbrlib.code-workspace  main.py  pyproject.toml  setup.py  values.json
cbrlib/: casebase.py  evaluators.py
cbrlib/model/: test_DateClass.py  test_EnumerationPredicate.py  test_StringClass.py
cbrlib/utils/: test_time.py
data/: Whiskey.csv
test/: test_AssemblyClass.py  test_AssemblyEvaluators.py  test_BooleanClass.py  test_DateTimeClass.py  test_FloatClass.py  test_IntegerClass.py  test_LinearReasoner.py  test_LookupTableEvaluator.py  test_NumberInterpolationEvaluator.py  test_NumberInterpolationEvaluators.py  test_RangePredicate.py  test_SetClass.py  test_SetEvaluator.py  test_time.py
